new endpoint for authorization_definitions
