# config/routes.rb
@@ -126,6 +126,8 @@ Rails.application.routes.draw do
       end
 
       resources :authorizations, path: 'habilitations', only: %i[index show]
+
+      resources :authorization_definitions, path: 'definitions', only: %i[index]
     end
   end
 
